[project]
name = "use-case-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "attrs>=25.3.0",
    "authlib>=1.6.0",
    "cachetools>=6.1.0",
    "confluent-kafka>=2.10.1",
    "fastavro>=1.11.1",
    "httpx>=0.28.1",
]
